--- a/Esterni/Piano_di_qualifica/diario.tex
+++ b/Esterni/Piano_di_qualifica/diario.tex
@@ -4,6 +4,7 @@
 \begin{diario}
 %	3.0.0 & {\AZ} (Responsabile) & 09/04/2017 & Approvazione del documento \\ \hline
 	2.1.0 & {\PB} (Verificatore) & 30/03/2017 & Verifica del documento \\ \hline
+	2.0.3 & {\GG} (Verificatore) & 30/03/2017 & Importate sezioni \ref{sec:spec_tu} e \ref{sec:tracc_tu} da PragmaDB \\ \hline
 	2.0.2 & {\MM} (Verificatore) & 29/03/2017 & Revisione della sezione \ref{sec:ob_qual_sw} \\ \hline
 	2.0.1 & {\MM} (Verificatore) & 28/03/2017 & Revisione della sezione \ref{sec:ob_qual_proc} \\ \hline
 	2.0.0 & {\LS} (Responsabile) & 03/03/2017 & Approvazione del documento \\ \hline
