--- a/util/hx-ambiente.tex
+++ b/util/hx-ambiente.tex
@@ -12,7 +12,7 @@
 \usepackage{eurosym}
 \usepackage{float}
 \usepackage{fancyhdr}
-\usepackage[table]{xcolor}
+\usepackage[table,dvipsnames]{xcolor}
 \usepackage{multirow}
 \usepackage{longtable}
 \usepackage{chngpage}
