--- a/Esterni/Manuale_utente/Manuale_utente_0_0_1.tex
+++ b/Esterni/Manuale_utente/Manuale_utente_0_0_1.tex
@@ -1,5 +1,5 @@
-% Analisi dei Requisiti
-% da compilare con il comando pdflatex Analisi_dei_requisiti_x.x.x.tex
+% Manuale Utente
+% da compilare con il comando pdflatex Manuale_utente_x.x.x.tex
 
 \input{../../util/hx-ambiente}
 
