--- a/Esterni/Definizione_di_prodotto/diario.tex
+++ b/Esterni/Definizione_di_prodotto/diario.tex
@@ -2,5 +2,13 @@
 % da includere con \include{diario}
 
 \begin{diario}
+	1.0.0 & {...} (Responsabile) & 15/03/2017 & Approvazione del documento \\ \hline
+	0.1.0 & {\AZ} (Verificatore) & 15/03/2017 & Verifica del documento \\ \hline
+	0.0.7 & {\PB} (Progettista) & 06/03/2017 & Stesura sezione \ref{sec:tracc} \\ \hline
+	0.0.6 & {...} (Progettista) & 06/03/2017 & Stesura sezioni \ref{sec:x}, \ref{sec:x} e \ref{sec:x} \\ \hline
+	0.0.5 & {...} (Progettista) & 05/03/2017 & Stesura sezioni \ref{sec:x}, \ref{sec:x} e \ref{sec:x} \\ \hline
+	0.0.4 & {...} (Progettista) & 04/03/2017 & Stesura sezioni \ref{sec:x}, \ref{sec:x} e \ref{sec:x} \\ \hline
+	0.0.3 & {...} (Progettista) & 04/03/2017 & Stesura sezioni \ref{sec:x}, \ref{sec:x} e \ref{sec:x} \\ \hline
+	0.0.2 & {\MM} (Progettista) & 01/03/2017 & Stesura sezioni \ref{sec:x}, \ref{sec:x} e \ref{sec:x} \\ \hline
 	0.0.1 & {\GG} (Amministratore) & 28/02/2017 & Stesura scheletro documento\\ \hline
 \end{diario}
