--- a/Esterni/Definizione_di_prodotto/tex/intro.tex
+++ b/Esterni/Definizione_di_prodotto/tex/intro.tex
@@ -5,18 +5,10 @@
 
 
 \subsection{Scopo del documento}
-% [...] <<<
+Questo documento ha lo scopo di definire nel dettaglio le componenti dell'architettura software di \proj; specifichiamo quindi il \emph{comportamento} delle componenti software.
 
 \subsection{Scopo del prodotto}
 \scopo
 
 \subsection{Glossario}
 \presgloss
-
-\subsection{Riferimenti} \label{sec:ref}
-
-\subsubsection{Riferimenti normativi}
-% [...] <<<
-
-\subsubsection{Riferimenti informativi}
-% [...] <<<
