aggiustato errore compilaz PdQ

--- a/Esterni/Piano_di_qualifica/Piano_di_qualifica_2_0_0.tex
+++ b/Esterni/Piano_di_qualifica/Piano_di_qualifica_2_0_0.tex
@@ -101,7 +101,7 @@
 		\subsubsection{Obiettivi di qualità di processo} \label{sec:ob_qual_proc}
 		In questa sezione vengono elencati i principali processi software identificati dal team sulla base dello standard ISO/IEC 12207:2008 e, per ognuno di essi, gli obiettivi di qualità perseguiti.
 
-\paragraph{Project Planning Process & Process Assessment and Control Process}
+\paragraph{Project Planning Process \& Process Assessment and Control Process}
 Questo macro-processo, derivato dall'unione dei processi 6.3.1 e 6.3.2 previsti dallo standard ISO/IEC 12207:2008, ha lo scopo di pianificare le attività richieste dal progetto.
 
 Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
@@ -171,7 +171,7 @@ Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
 \end{tabular}
 \end{center}
 
-\paragraph{System Qualification Testing Process & Software Qualification Testing Process}
+\paragraph{System Qualification Testing Process \& Software Qualification Testing Process}
 Il macro-processo, derivante dall'unione dei processi 6.4.6 e 7.1.7 di ISO/IEC 12207:2008, ha lo scopo che ogni requisito individuato sia stato implementato nel prodotto.
 
 Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
@@ -2372,22 +2372,22 @@ All'interno di questa sezione vengono riportati gli esiti delle attività di ver
 		\begin{table}[H]
 		\begin{tabular}{|l|p{2.25cm}|p{2.25cm}|p{2.25cm}|}
 		\hline
-		\textbf{Metrica} 		 					&\textbf{Valore/range accettabile}	&\textbf{Valore/range obiettivo}	&\textbf{Valore/range effettivo}\\
+		\textbf{Metrica} & \textbf{Valore/range accettabile} & \textbf{Valore/range obiettivo} & \textbf{Valore/range effettivo} \\
 		\hline
-		Completezza									&								&							&\\
-Numero di violazioni di alta importanza				&0								&0							&27*
-Numero di violazioni di media importanza			&0-5							&0						&0
-Numero di violazioni di bassa importanza			&0-10							&0							&0
+		Completezza & ~ & ~ & ~ \\
+		Numero di violazioni di alta importanza & 0 & 0 & $27$* \\
+		Numero di violazioni di media importanza & $[0, 5]$ & 0 & 0 \\
+		Numero di violazioni di bassa importanza & $[0, 10]$ & 0 & 0 \\
 		\hline
-		Correttezza 								&								&							&\\
-Numero di violazioni di alta importanza				&0								&0							&0
-Numero di violazioni di media importanza			&0-5							&0							&0
-Numero di violazioni di bassa importanza			&0-10							&0							&0
+		Correttezza & ~ & ~ & ~ \\
+		Numero di violazioni di alta importanza & 0 & 0 \\
+		Numero di violazioni di media importanza & $[0, 5]$ & 0 & 0 \\
+		Numero di violazioni di bassa importanza & $[0, 10]$ & 0 & 0 \\
 		\hline
-		Stile 										&								&							&\\
-Numero di violazioni di alta importanza				&0								&0							&0
-Numero di violazioni di media importanza			&0-5							&0							&13**
-Numero di violazioni di bassa importanza			&0-10							&0							&0
+		Stile & ~ & ~ & ~ \\
+		Numero di violazioni di alta importanza & 0 & 0 & 0 \\
+		Numero di violazioni di media importanza & $[0, 5]$ & 0 & $13$** \\
+		Numero di violazioni di bassa importanza & $[0, 10]$ & 0 & 0 \\
 		\hline
 		\end{tabular}
 		\caption{Esiti del calcolo delle metriche relative alla progettazione}
@@ -2522,22 +2522,22 @@ Numero di violazioni di bassa importanza			&0-10							&0							&0
 		\begin{table}[H]
 		\begin{tabular}{|l|p{2.25cm}|p{2.25cm}|p{2.25cm}|}
 		\hline
-		\textbf{Metrica} 		 					&\textbf{Valore/range accettabile}	&\textbf{Valore/range obiettivo}	&\textbf{Valore/range effettivo}\\
+		\textbf{Metrica} & \textbf{Valore/range accettabile} & \textbf{Valore/range obiettivo} & \textbf{Valore/range effettivo} \\
 		\hline
-		Completezza									&								&							&\\
-Numero di violazioni di alta importanza				&0								&0							&27*
-Numero di violazioni di media importanza			&0-5							&0						&0
-Numero di violazioni di bassa importanza			&0-10							&0							&0
+		Completezza & ~ & ~ & ~ \\
+		Numero di violazioni di alta importanza & 0 & 0 & $27$* \\
+		Numero di violazioni di media importanza & $[0, 5]$ & 0 & 0 \\
+		Numero di violazioni di bassa importanza & $[0, 10]$ & 0 & 0 \\
 		\hline
-		Correttezza 								&								&							&\\
-Numero di violazioni di alta importanza				&0								&0							&0
-Numero di violazioni di media importanza			&0-5							&0							&0
-Numero di violazioni di bassa importanza			&0-10							&0							&0
+		Correttezza & ~ & ~ & ~ \\
+		Numero di violazioni di alta importanza & 0 & 0 & 0 \\
+		Numero di violazioni di media importanza & $[0, 5]$ & 0 & 0 \\
+		Numero di violazioni di bassa importanza & $[0, 10]$ & 0 & 0 \\
 		\hline
-		Stile 										&								&							&\\
-Numero di violazioni di alta importanza				&0								&0							&0
-Numero di violazioni di media importanza			&0-5							&0							&13**
-Numero di violazioni di bassa importanza			&0-10							&0							&0
+		Stile & ~ & ~ & ~ \\
+		Numero di violazioni di alta importanza & 0 & 0 & 0 \\
+		Numero di violazioni di media importanza & $[0, 5]$ & 0 & $13$** \\
+		Numero di violazioni di bassa importanza & $[0, 10]$ & 0 & 0 \\
 		\hline
 		\end{tabular}
 		\caption{Esiti del calcolo delle metriche relative alla progettazione}
