definizione di prodotto

--- a/Esterni/Definizione_di_prodotto/diario.tex
+++ b/Esterni/Definizione_di_prodotto/diario.tex
@@ -2,13 +2,16 @@
 % da includere con \include{diario}
 
 \begin{diario}
-	1.0.0 & {...} (Responsabile) & 15/03/2017 & Approvazione del documento \\ \hline
-	0.1.0 & {\AZ} (Verificatore) & 15/03/2017 & Verifica del documento \\ \hline
-	0.0.7 & {\PB} (Progettista) & 06/03/2017 & Stesura sezione \ref{sec:tracc} \\ \hline
-	0.0.6 & {...} (Progettista) & 06/03/2017 & Stesura sezioni \ref{sec:x}, \ref{sec:x} e \ref{sec:x} \\ \hline
-	0.0.5 & {...} (Progettista) & 05/03/2017 & Stesura sezioni \ref{sec:x}, \ref{sec:x} e \ref{sec:x} \\ \hline
-	0.0.4 & {...} (Progettista) & 04/03/2017 & Stesura sezioni \ref{sec:x}, \ref{sec:x} e \ref{sec:x} \\ \hline
-	0.0.3 & {...} (Progettista) & 04/03/2017 & Stesura sezioni \ref{sec:x}, \ref{sec:x} e \ref{sec:x} \\ \hline
-	0.0.2 & {\MM} (Progettista) & 01/03/2017 & Stesura sezioni \ref{sec:x}, \ref{sec:x} e \ref{sec:x} \\ \hline
+	1.0.0 & {\MM} (Responsabile) & 14/03/2017 & Approvazione del documento \\ \hline
+	0.1.0 & {\AZ} (Verificatore) & 14/03/2017 & Verifica del documento \\ \hline
+	0.0.10 & {\PB} (Progettista) & 13/03/2017 & Stesura sezione \ref{sec:tracc} \\ \hline
+	0.0.9 & {\PB} (Progettista) & 11/03/2017 & Stesura sezioni \ref{\nogloxy{swedesigner::server::compiler}} e \ref{\nogloxy{swedesigner::server::compiler::java}} \\ \hline
+	0.0.8 & {\AZ} (Progettista) & 10/03/2017 & Riviste sezioni \ref{\nogloxy{swedesigner::server::project}} e \ref{\nogloxy{swedesigner::server::template}} \\ \hline
+	0.0.7 & {\LB} (Progettista) & 06/03/2017 & Ampliamento sezione \ref{sec:front} (in particolare package client::celltypes) \\ \hline
+	0.0.6 & {\AZ} (Progettista) & 06/03/2017 & Ampliata sezione \ref{sec:back} \\ \hline
+	0.0.5 & {\LB} (Progettista) & 05/03/2017 & Ampliamento sezioni \ref{\nogloxy{swedesigner::client::model}} e \ref{\nogloxy{swedesigner::client::view}} \\ \hline
+	0.0.4 & {\LS} (Progettista) & 04/03/2017 & Inizio stesura sezione \ref{sec:back} \\ \hline
+	0.0.3 & {\MM} (Progettista) & 02/03/2017 & Ampliamento sezione \ref{sec:front} \\ \hline
+	0.0.2 & {\MM} (Progettista) & 01/03/2017 & Inizio stesura sezione \ref{sec:front} \\ \hline
 	0.0.1 & {\GG} (Amministratore) & 28/02/2017 & Stesura scheletro documento\\ \hline
 \end{diario}
