inserite generalizzazioni uc4

--- a/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_2_0_0.tex
+++ b/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_2_0_0.tex
@@ -243,6 +243,16 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 		\item l'attore può modificare un'associazione (UC4.15);
 		\item l'attore può modificare un commento (UC4.16).
 	\end{enumerate}
+	\item \textbf{Generalizzazioni}:
+	\begin{itemize}
+		\item Inserimento Classe (UC4.2);
+		\item Inserimento Interfaccia (UC4.3);
+		\item Inserimento Associazione (UC4.5);
+		\item Inserimento Generalizzazione (UC4.6);
+		\item Inserimento Implementazione (UC4.7);
+		\item Modifica Classe (UC4.13);
+		\item Modifica Associazione (UC4.15).
+	\end{itemize}
 \end{itemize}
 
 \subsubsection{UC4.1: Inserimento BloccoClasse}
